[package]
name = "stress-test"
version = "0.1.0"
authors = ["Oleksandr Korienev <alexkorienev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest                    = { version="0.11.2", features=["blocking", "json"] }
clap                       = "2.33.3"
serde_json                 = "1.0.64"
serde                      = { version = "1.0.124", features = ["derive"] }
log                        = "0.4.14"
rand                       = "0.8.3"
simple_logger              = "1.11.0"
